# bevy-caw-experiment

./: Cargo.toml  README.md  build-web.sh  opt-web.sh  shell.nix
.github/workflows/: publish.yml
src/: main.rs
static_web/: index.html
